# CareLink

./: .env.example  .gitignore  COMMIT_MESSAGE.txt  README.md  SECURITY.md  THREAT_MODEL.md  carelink-srs.md  pom.xml  requirements.txt  run-identity-dev-checks.sh  run-identity-tests.sh  test_identity.db
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.semgrep/: no-string-sql.yaml  no-weak-crypto.yaml  phi-audit-required.yaml
docs/: API.md  DATA_MODEL.md  SRS.md
docs/adr/: ADR-000-template.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-008.md  ADR-00X-jwt-management.md
migrations/: 0001_create_identity.sql  001_public_schema.sql  002_tenant_schema_template.sql
portals/patient-portal/: package.json
portals/physician-portal/: .eslintrc.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
portals/physician-portal/app/: layout.tsx
portals/physician-portal/lib/: i18n.ts  types.ts
portals/physician-portal/messages/: en-US.json  es-CO.json
schemas/appointments/: appointment-booked.schema.json  appointment-cancelled.schema.json
scripts/: create_tenant_schema.sql  prepare_commit.sh
services/api-gateway-identity/: Makefile  dev-requirements.txt  requirements.txt
services/api-gateway-identity/app/: db.py  main.py  (+2 more)
services/billing-service/: pom.xml
services/clinical-service/: pom.xml
services/identity-service/: pom.xml
services/notification-service/: pyproject.toml
services/notification-service/app/: main.py
services/scheduling-service/: pom.xml
tasks/: PROJECT_PLAN.md  lessons.md  todo.md
(+205 files in other folders)
